member can now borrow books
