# cmd/api/services/borrowService.go
@@ -98,6 +98,51 @@ func (b *BorrowService) BorrowBookService(userId uint, payload *requests.BorrowR
 		return nil, errors.New("book is not available")
 	}
 
-	return nil, nil
+	var existingBorrow models.Borrow
+
+	if err := b.DB.Where("user_id = ? AND book_id = ? AND status = ?", userId, payload.BookID, models.StatusBorrowed).First(&existingBorrow).Error; err == nil {
+
+		return nil, errors.New("book is already borrowed")
+	}
+
+	const maxBooksAllowed = 5
+	var activeBorrows int64
+	b.DB.Model(&models.Borrow{}).Where("user_id = ? AND status = ?", userId, models.StatusBorrowed).Count(&activeBorrows)
+
+	if activeBorrows >= maxBooksAllowed {
+		return nil, errors.New("user has already borrowed 5 books")
+	}
+
+	// if all the conditions are passed then create a new borrow record
+
+	borrow := &models.Borrow{
+		UserID:     userId,
+		BookID:     payload.BookID,
+		BorrowDate: time.Now(),
+		DueDate:    payload.DueDate,
+		ReturnDate: nil,
+		Status:     models.StatusBorrowed,
+	}
+
+	result = b.DB.Create(borrow)
+
+	if result.Error != nil {
+		log.Default().Println("error creating borrow", result.Error)
+		return nil, errors.New("error creating borrow record")
+	}
+
+	if err := b.DB.Preload("User").Preload("Book").First(&borrow, borrow.ID).Error; err != nil {
+		log.Default().Println("error getting borrow record", err)
+		// return nil, errors.New("error getting borrow record")
+	}
+	// decrement book stock
+	book.Stock -= 1
+
+	if err := b.DB.Save(&book).Error; err != nil {
+		log.Default().Println("error decrementing book stock", err)
+		return nil, errors.New("error decrementing book stock")
+	}
+
+	return borrow, nil
 
 }
